# cartesia-aws

./: README.md  Sonic-3-Jumpstart.ipynb
aws-workshop/: README.md  main.py  main_agentcore.py  pyproject.toml
aws-workshop/agentcore/: Dockerfile  README.md  __init__.py  agent.py  build-and-push.sh  deploy.py  invoke.py  requirements-agent.txt  setup-prerequisites.sh
sonic-3-5-jumpstart/: README.md  Sonic-3-5-Jumpstart.ipynb
sonic-3-jumpstart/: README.md
