[project]
name = "aws-workshop"
version = "0.2.0"
description = "Workshop: Cartesia Line voice agent on AWS — with AgentCore Runtime expansion"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==0.2.10",
    "boto3>=1.34.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
agentcore = [
    "strands-agents>=1.0.0",
]

[tool.setuptools]
py-modules = ["main", "main_agentcore"]
